--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 # Project specific information
-package=org._2585robophiles.frc2015
+package=org.impact2585.frc2015
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
 
